2011-01-21 Németh László <nemeth at OOo>:
	* suggestmgr.*: limit wild suggestions (hun#2970237)
	- limited compound word suggestions
	- improved and limited ngram based suggestions
	* tests/*.sug: modified test files

	* affixmgr.*, hunspell.*: add flag FORCEUCASE (hun#2999228), force
	  capitalization of compound words, see Hunspell 4 manual),
	  suggested by Ruud Baars
	  test/forceucase.*: test files

	* affixmgr.*, hunspell.*: add flag WARN (hun#1808861), optional warning feature
	  for rare words, suggested by Ruud Baars
	  tests/warn: test files
	* tools/hunspell.cxx: add option -r for optional filtering of rare words

	* affixmgr.cxx: fix hun#3161359 (gcc warnings) reported by Ryan VanderMeulen.

2011-01-17 Németh László <nemeth at OOo>:
	* suggestmgr.cxx: fix hun#3158994 and hun#3159027 (missing csconv table
	  using awkward 8bit capitalization of UTF-8 encoded dictionary words with PHONE
	  suggestion, reported by benjarobin and dicollecte at SF.net).

2011-01-13 Németh László <nemeth at OOo>:
        * affixmgr.cxx: ONLYINCOMPOUND fix for hun#2999224 (fogemorphene
          was allowed in end position of compoundings). Reported by Ruud Baars.
        * tests/onlyincompound2.*: test files

2011-01-10 Ingo H. de Boer <idb_winshell at SF.net>:
	* win_api/{hunspell,libhunspell, testparser}.vcproj: updated project
	  files for the library and the executables. Compiling problem
	  also reported by Don Walker.

2011-01-06 Németh László <nemeth at OOo>:
        * affixmgr.cxx: fix freedesktop#32850 (program halt during Hungarian
          spell checking of the word "6csillagocska6", reported by András Tímár)

        * tools/hunspell.cxx: add Mac OS X Hunspell dictionary paths, asked by
          Vidar Gundersen in hunfeat#3142010

2011-01-05 Caolán McNamara <cmc at OOo>:
	* moz#620626 NS_UNICHARUTIL_CID doesn't support
	  case conversion

2011-01-03 Németh László <nemeth at OOo>:
	* NEWS and THANKS: update for release 1.2.13
